# vade-example-plugin

./: Cargo.toml  README.md
src/: main.rs
